# ai-influencer-agency

./: README.md  main.py  pyproject.toml  requirements.txt  shot_plans.md
data/: interview_results.md
src/: mcp.py  mcp_server.py  onboarding.py  planning.py  prompts.py
